fix: 사이드바 스크롤 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,9 +14,28 @@
   }
 }
 
-
 html,
 body,
 :root {
   height: 100%;
+}
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    @apply bg-background;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    border: 3px solid transparent;
+    @apply bg-primary/30 rounded-full border-2 border-transparent;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    @apply bg-primary/50;
+  }
 }
